Fix what's on widget overflowing when show details are long.
Add min-width: 0 to the flex-child 'shows' so it can handle overflow on it's
children properly

more info here: https://css-tricks.com/flexbox-truncated-text/

--- a/app/styles/legacy/_stream-widget.scss
+++ b/app/styles/legacy/_stream-widget.scss
@@ -17,6 +17,7 @@ div#stream_launch_widget {
     }
     & > div.show {
         @include flex(1);
+        min-width: 0;
         width: auto;
         @include display-flex;
         & > div.image {
@@ -46,6 +47,7 @@ div#stream_launch_widget {
 
     .head {
         width: auto;
+        overflow: hidden;
     }
 
     .head h4 {
